add stylelint, i18n plugin for eslint, fix styles

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,3 +1,6 @@
 {
-    "Главная страница": "Главная страница"
+  "Главная страница": "Главная страница",
+  "skryt": "Скрыть",
+  "Главная": "Главная",
+  "О нас": "О нас"
 }
