--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,3 +1,6 @@
 {
-    "Главная страница": "Main page"
+    "Главная страница": "Main page",
+    "skryt": "Hide",
+    "Главная": "Home",
+    "О нас": "About Us"
 }
