add unit test and page loader

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,5 +2,6 @@
   "Главная страница": "Главная страница",
   "skryt": "Скрыть",
   "Главная": "Главная",
-  "О нас": "О нас"
+  "О нас": "О нас",
+  "Страница не найдена": "Страница не найдена"
 }
