add error boundary

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,7 +1,9 @@
 {
-  "Главная страница": "Главная страница",
-  "skryt": "Скрыть",
-  "Главная": "Главная",
-  "О нас": "О нас",
-  "Страница не найдена": "Страница не найдена"
+    "Главная страница": "Главная страница",
+    "skryt": "Скрыть",
+    "Главная": "Главная",
+    "О нас": "О нас",
+    "Обновить страницу": "Обновить страницу",
+    "Страница не найдена": "Страница не найдена",
+    "Произошла ошибка": "Произошла ошибка"
 }
