--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,9 @@
 {
-    "Главная страница": "Main page",
-    "skryt": "Hide",
-    "Главная": "Home",
-    "О нас": "About Us"
+  "Главная страница": "Main page",
+  "skryt": "Hide",
+  "Главная": "Home",
+  "О нас": "About Us",
+  "Обновить страницу": "Refresh the page",
+  "Произошла ошибка": "An error has occurred",
+  "Страница не найдена": "Page not found"
 }
