add entity Counter

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,5 +4,6 @@
     "О нас": "About Us",
     "Обновить страницу": "Refresh the page",
     "Произошла ошибка": "An error has occurred",
-    "Страница не найдена": "Page not found"
+    "Страница не найдена": "Page not found",
+    "Войти": "Sign in"
 }
