--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,8 +1,11 @@
 {
-    "Главная страница": "Главная страница",
-    "Главная": "Главная",
-    "О нас": "О нас",
-    "Обновить страницу": "Обновить страницу",
-    "Страница не найдена": "Страница не найдена",
-    "Произошла ошибка": "Произошла ошибка"
+  "Главная страница": "Главная страница",
+  "Главная": "Главная",
+  "О нас": "О нас",
+  "Обновить страницу": "Обновить страницу",
+  "Страница не найдена": "Страница не найдена",
+  "Произошла ошибка": "Произошла ошибка",
+  "Войти": "Войти",
+  "Уменьшить": "Уменьшить",
+  "Увеличить": "Увеличить"
 }
