--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,9 +1,10 @@
 {
-    "Главная страница": "Main page",
-    "Главная": "Home",
-    "О нас": "About Us",
-    "Обновить страницу": "Refresh the page",
-    "Произошла ошибка": "An error has occurred",
-    "Страница не найдена": "Page not found",
-    "Войти": "Sign in"
+  "Главная страница": "Main page",
+  "Главная": "Home",
+  "О нас": "About Us",
+  "Обновить страницу": "Refresh the page",
+  "Произошла ошибка": "An error has occurred",
+  "Страница не найдена": "Page not found",
+  "Войти": "Sign in",
+  "Аккаунт": "Account"
 }
