--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,5 +7,6 @@
   "Произошла ошибка": "Произошла ошибка",
   "Войти": "Войти",
   "Уменьшить": "Уменьшить",
-  "Увеличить": "Увеличить"
+  "Увеличить": "Увеличить",
+  "Аккаунт": "Аккаунт"
 }
