--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,16 +1,17 @@
 {
-    "Главная страница": "Главная страница",
-    "Главная": "Главная",
-    "О нас": "О нас",
-    "Обновить страницу": "Обновить страницу",
-    "Страница не найдена": "Страница не найдена",
-    "Произошла ошибка": "Произошла ошибка",
-    "Войти": "Войти",
-    "Уменьшить": "Уменьшить",
-    "Увеличить": "Увеличить",
-    "Аккаунт": "Аккаунт",
-    "Форма авторизации": "Форма авторизации",
-    "User not found": "Пользователь не найден",
-    "Пароль не верный": "Пароль неверный",
-    "Выйти": "Выйти"
+  "Главная страница": "Главная страница",
+  "Главная": "Главная",
+  "О нас": "О нас",
+  "Обновить страницу": "Обновить страницу",
+  "Страница не найдена": "Страница не найдена",
+  "Произошла ошибка": "Произошла ошибка",
+  "Войти": "Войти",
+  "Уменьшить": "Уменьшить",
+  "Увеличить": "Увеличить",
+  "Аккаунт": "Аккаунт",
+  "Форма авторизации": "Форма авторизации",
+  "User not found": "Пользователь не найден",
+  "Пароль не верный": "Пароль неверный",
+  "Выйти": "Выйти",
+  "Страница профиля": "Страница профиля"
 }
