--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -2,5 +2,15 @@
   "Редактировать": "Редактировать",
   "Профиль": "Профиль",
   "Ваше имя": "Ваше имя",
-  "Ваше фамилия": "Ваше фамилия"
+  "Ваше фамилия": "Ваше фамилия",
+  "Произошла ошбка при загрузке профиля": "Произошла ошбка при загрузке профиля",
+  "Обновите страницу": "Обновите страницу",
+  "Отменить": "Отменить",
+  "Сохранить": "Сохранить",
+  "Ваше возраст": "Ваше возраст",
+  "Город": "Город",
+  "Имя пользователя": "Имя пользователя",
+  "Аватар": "Аватар",
+  "Укажите валюту": "Укажите валюту",
+  "Укажите страну": "Укажите страну"
 }
