add tetsts for profile module

--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -12,5 +12,10 @@
   "Имя пользователя": "Имя пользователя",
   "Аватар": "Аватар",
   "Укажите валюту": "Укажите валюту",
-  "Укажите страну": "Укажите страну"
+  "Укажите страну": "Укажите страну",
+  "Серверная ошибка": "Серверная ошибка",
+  "Не указан регион": "Не указан регион",
+  "Данные не указаны": "Данные не указаны",
+  "Некорректный возраст": "Некорректный возраст",
+  "Нет данных": "Нет данных"
 }
