--- a/public/locales/ru/articles.json
+++ b/public/locales/ru/articles.json
@@ -1,4 +1,6 @@
 {
   "ArticleDetailsPage": "Артикльс Детайл Пейг",
-  "ArticlePage": "Артиклс Пейг"
+  "ArticlePage": "Артиклс Пейг",
+  "Статья не найдена": "Статья не найдена",
+  "Произошла ошибка при загрузке файла": "Произошла ошибка при загрузке файла"
 }
