add feature addCommentForm

--- a/public/locales/ru/comments.json
+++ b/public/locales/ru/comments.json
@@ -1,3 +1,5 @@
 {
-  "Комментарии отсутсвуют": "Комментарии отсутсвуют"
+  "Комментарии отсутсвуют": "Комментарии отсутсвуют",
+  "Введите текст комментария": "Введите текст комментария",
+  "Отправить": "Отправить"
 }
