add article list, article item, skeleton

--- a/public/locales/ru/articles.json
+++ b/public/locales/ru/articles.json
@@ -3,5 +3,6 @@
   "ArticlePage": "Артиклс Пейг",
   "Статья не найдена": "Статья не найдена",
   "Произошла ошибка при загрузке файла": "Произошла ошибка при загрузке файла",
-  "Комментарии": "Комментарии"
+  "Комментарии": "Комментарии",
+  "Читать далее": "Читать далее"
 }
