add filters, sort, search

--- a/public/locales/ru/articles.json
+++ b/public/locales/ru/articles.json
@@ -4,5 +4,18 @@
   "Статья не найдена": "Статья не найдена",
   "Произошла ошибка при загрузке файла": "Произошла ошибка при загрузке файла",
   "Комментарии": "Комментарии",
-  "Читать далее": "Читать далее"
+  "Читать далее": "Читать далее",
+  "Сортировать по": "Сортировать по",
+  "Поиск": "Поиск",
+  "по": "по",
+  "возрастанию": "возрастанию",
+  "убыванию": "убыванию",
+  "просмотрам": "просмотрам",
+  "заголовку": "заголовку",
+  "дате создания": "дате создания",
+  "IT": "IT",
+  "SCIENCE": "SCIENCE",
+  "ECONOMICS": "ECONOMICS",
+  "ALL": "ALL",
+  "Статьи не найдены": "Статьи не найдены"
 }
