add combine reducers,

--- a/public/locales/ru/articles.json
+++ b/public/locales/ru/articles.json
@@ -17,5 +17,6 @@
   "SCIENCE": "SCIENCE",
   "ECONOMICS": "ECONOMICS",
   "ALL": "ALL",
-  "Статьи не найдены": "Статьи не найдены"
+  "Статьи не найдены": "Статьи не найдены",
+  "Рекомендуем": "Рекомендуем"
 }
