--- a/public/locales/ru/articles.json
+++ b/public/locales/ru/articles.json
@@ -18,5 +18,6 @@
   "ECONOMICS": "ECONOMICS",
   "ALL": "ALL",
   "Статьи не найдены": "Статьи не найдены",
-  "Рекомендуем": "Рекомендуем"
+  "Рекомендуем": "Рекомендуем",
+  "Назад к списку": "Назад к списку"
 }
