--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,18 +1,21 @@
 {
-    "Главная страница": "Main page",
-    "Главная": "Home",
-    "О нас": "About Us",
-    "Обновить страницу": "Refresh the page",
-    "Произошла ошибка": "An error has occurred",
-    "Страница не найдена": "Page not found",
-    "Уменьшить": "Уменьшить",
-    "Увеличить": "Увеличить",
-    "Войти": "Sign in",
-    "Аккаунт": "Account",
-    "Форма авторизации": "Auth form",
-    "User not found": "User not found",
-    "Пароль не верный": "Password is wrong",
-    "Выйти": "Logout",
-    "Страница профиля": "Profile Page",
-    "Статьи": "Articles"
+  "Главная страница": "Main page",
+  "Главная": "Home",
+  "О нас": "About Us",
+  "Обновить страницу": "Refresh the page",
+  "Произошла ошибка": "An error has occurred",
+  "Страница не найдена": "Page not found",
+  "Уменьшить": "Уменьшить",
+  "Увеличить": "Увеличить",
+  "Войти": "Sign in",
+  "Аккаунт": "Account",
+  "Форма авторизации": "Auth form",
+  "User not found": "User not found",
+  "Пароль не верный": "Password is wrong",
+  "Выйти": "Logout",
+  "Страница профиля": "Profile Page",
+  "Статьи": "Articles",
+  "Отправить": "Send",
+  "Статьи не найдены": "Articles not found",
+  "Создать статью": "Create article"
 }
