add rtq query, iject article, big refactoring

--- a/public/locales/ru/articles.json
+++ b/public/locales/ru/articles.json
@@ -19,5 +19,6 @@
   "ALL": "ALL",
   "Статьи не найдены": "Статьи не найдены",
   "Рекомендуем": "Рекомендуем",
-  "Назад к списку": "Назад к списку"
+  "Назад к списку": "Назад к списку",
+  "Ошибка загрузки рекоммендаций": "Ошибка загрузки рекоммендаций"
 }
