--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -17,5 +17,6 @@
   "Не указан регион": "Не указан регион",
   "Данные не указаны": "Данные не указаны",
   "Некорректный возраст": "Некорректный возраст",
-  "Нет данных": "Нет данных"
+  "Нет данных": "Нет данных",
+  "Не хватает id Profile": "Не хватает id Profile"
 }
