add private routes

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -15,5 +15,6 @@
   "Выйти": "Выйти",
   "Страница профиля": "Страница профиля",
   "Статьи": "Статьи",
-  "Создать статью": "Создать статью"
+  "Создать статью": "Создать статью",
+  "Админка": "Админка"
 }
