--- a/public/locales/ru/raiting.json
+++ b/public/locales/ru/raiting.json
@@ -1,5 +1,8 @@
 {
   "Ваш отзыв": "Ваш отзыв",
   "Отправить": "Отправить",
-  "Закрыть": "Закрыть"
+  "Закрыть": "Закрыть",
+  "Оцените статью": "Оцените статью",
+  "Оставьте отзыв": "Оставьте отзыв",
+  "Спасибо!": "Спасибо!"
 }
