update RTL and add route tests

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -16,5 +16,6 @@
   "Страница профиля": "Страница профиля",
   "Статьи": "Статьи",
   "Создать статью": "Создать статью",
-  "Админка": "Админка"
+  "Админка": "Админка",
+  "error": "error"
 }
